update test file

--- a/02-ingress/Makefile
+++ b/02-ingress/Makefile
@@ -9,6 +9,4 @@ destroy:
 	@kubectl delete -f ingress.yaml
 
 test:
-	@curl http://localhost/service1 | grep -q "Welcome to nginx\!" && echo "success" || echo "failed"
-	@curl http://localhost/service2 | grep -q "Welcome to nginx\!" && echo "success" || echo "failed"
-	@curl http://localhost/ | grep -q "Welcome to nginx\!" && echo "failed" || echo "success"
+	@sh ./test.sh
